--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://jackhone.com/">
-  <meta property="og:title" content="Jack Hone · Product Designer">
+  <meta property="og:title" content="Jack Hone">
   <meta property="og:description" content="Craft focused designer with over a decade of experience building from zero to one. Previously at ustwo, Airbnb, Bulb Energy, and now at Easol.">
   <meta property="og:image" content="https://jackhone.com/assets/og-image.png">
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://jackhone.com/">
-  <meta property="twitter:title" content="Jack Hone · Product Designer">
+  <meta property="twitter:title" content="Jack Hone">
   <meta property="twitter:description" content="Craft focused designer with over a decade of experience building from zero to one. Previously at ustwo, Airbnb, Bulb Energy, and now at Easol.">
   <meta property="twitter:image" content="https://jackhone.com/assets/twitter-image.png">
   
