--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <img src="assets/site-exp.png" alt="Easol platform interface showing improved user experience and navigation" class="work-image">
             </div>
             <div class="work-content">
-              <h3 class="work-title">Easol Site experience</h3>
+              <h3 class="work-title">Easol Site Experience</h3>
               <p class="work-description">Enhanced user experience across the platform with improved navigation, performance optimizations, and streamlined user flows.</p>
             </div>
           </div>
