--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="work-row">
             <div class="work-media">
               <video class="work-video" autoplay muted loop playsinline webkit-playsinline aria-label="Packages interface demonstration">
-                <source src="assets/Packages.mp4" type="video/mp4">
+                <source src="assets/packages.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
             </div>
