--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="work-content">
               <h3 class="work-title">Easol Point of Sale</h3>
-              <p class="work-description">Redesigned the point of sale experience for tablet devices, focusing on usability and efficiency for retail staff.</p>
+              <p class="work-description">Contributed to the design of Easol's first point-of-sale system from 0-to-1. Created a touch-optimized interface enabling creators to sell single and multi-date products with an intuitive, quick transaction flow.</p>
             </div>
           </div>
           <div class="work-row">
@@ -98,7 +98,7 @@
             </div>
             <div class="work-content">
               <h3 class="work-title">Easol Packages</h3>
-              <p class="work-description">Combine complex products into configurable bundles with an intuitive interface for creating and managing package offerings.</p>
+              <p class="work-description">Led design of a foundational feature enabling creators to bundle experiences and accommodations using business logic. Launched globally in 2023, now accounting for a significant portion of Easol revenue.</p>
             </div>
           </div>
           <div class="work-row">
@@ -107,7 +107,7 @@
             </div>
             <div class="work-content">
               <h3 class="work-title">Easol Site Experience</h3>
-              <p class="work-description">Enhanced user experience across the platform with improved navigation, performance optimizations, and streamlined user flows.</p>
+              <p class="work-description">Collaborated with the theme design team to evolve strategy from reactive to proactive and intentional. Helped completely refresh and refactor design patterns, establishing a more systematic approach to site design.</p>
             </div>
           </div>
           <div class="work-row">
@@ -116,7 +116,7 @@
             </div>
             <div class="work-content">
               <h3 class="work-title">Airbnb Design System</h3>
-              <p class="work-description">Developed comprehensive design system components and guidelines for consistent user interface across Airbnb's internal tools and platforms.</p>
+              <p class="work-description">Part of a senior central team driving Airbnb's biggest design system evolution in years. Designed and planned rollout of a rethought visual language for ~300 designers, creating documentation as a product.</p>
             </div>
           </div>
         </div>
