--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="work-item">
             <div class="work-period">2022 - Now</div>
             <div class="work-place">Easol</div>
-            <div class="work-desc">The operating system for experience commerce.</div>
+            <div class="work-desc">Experience commerce platform.</div>
           </div>
         </div>
         <div class="hero-now">
