Added video for site experience

--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
           </div>
           <div class="work-row">
             <div class="work-media">
-              <img src="assets/site-exp.png" alt="Easol platform interface showing improved user experience and navigation" class="work-image">
+              <video class="work-video" autoplay muted loop playsinline webkit-playsinline aria-label="Easol site experience demonstration">
+                <source src="assets/Sites.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
             </div>
             <div class="work-content">
               <h3 class="work-title">Easol Site Experience</h3>
