Added links to work places and new now message

--- a/index.html
+++ b/index.html
@@ -48,28 +48,28 @@
         <div class="hero-work">
           <div class="work-item">
             <div class="work-period">2014 - 2017</div>
-            <div class="work-place">ustwo</div>
+            <div class="work-place"><a href="https://ustwo.com" target="_blank" rel="noopener" class="contact-link">ustwo</a></div>
             <div class="work-desc">Consumer banking and entertainment.</div>
           </div>
           <div class="work-item">
             <div class="work-period">2017 - 2020</div>
-            <div class="work-place">Airbnb</div>
+            <div class="work-place"><a href="https://airbnb.com" target="_blank" rel="noopener" class="contact-link">Airbnb</a></div>
             <div class="work-desc">Design systems and internal tooling.</div>
           </div>
           <div class="work-item">
             <div class="work-period">2020 - 2022</div>
-            <div class="work-place">Bulb Energy</div>
+            <div class="work-place"><a href="https://en.wikipedia.org/wiki/Bulb_Energy" target="_blank" rel="noopener" class="contact-link">Bulb</a></div>
             <div class="work-desc">Design systems and data visualisations.</div>
           </div>
           <div class="work-item">
             <div class="work-period">2022 - Now</div>
-            <div class="work-place">Easol</div>
-            <div class="work-desc">Experience commerce platform.</div>
+            <div class="work-place"><a href="https://easol.com" target="_blank" rel="noopener" class="contact-link">Easol</a></div>
+            <div class="work-desc">Everything under the sun.</div>
           </div>
         </div>
         <div class="hero-now">
           <div class="now-label">Now</div>
-          <div class="now-desc">Gym training twice a week now. Different weather, different energy. Loving Mix from Spotify, an intriguing use case, UI misses the mark. Still reaching for Notion over Obsidian, even with Claude Code.</div>
+          <div class="now-desc">Back from a few days in Seville. Ham and history. Been to lots of AI events recently, Brainstation, Intercom, and have one more coming up. Maybe I'll see you there.</div>
           <div class="now-updated" id="now-updated">Updated 1 day ago</div>
         </div>
         </section>
@@ -197,7 +197,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Function to calculate and display time difference
       function updateTimeDifference() {
-        const targetDate = new Date('2025-09-27');
+        const targetDate = new Date('2025-10-18');
         const currentDate = new Date();
         const diffTime = Math.abs(targetDate - currentDate);
         const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
